--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/three": "^0.149.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "r3f-perf": "^7.1.2",
     "rome": "^11.0.0",
     "typescript": "^4.9.3",
