--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.150.1",
+    "three-csm": "^3.2.0",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
